' Generated by UML Generator
' Encoded: ZLGxQyCm4DxrApIs3OREffGKiXG22KdfMbpxS4KLoKYo-wB_lNUId5YMXou9-kw-nvsKhAshZEjFajbteRhAL2TUoyhQ1-UCUEqTFDPQ7SKty5ls9XhWjJ2r1CPy5zy80xKJMja3s0w_WFympWkKTRqj-H5LL4k8qIY6o5POTtUWmpt11NwiMd17JxYwdb1MzWodSjWqQD54fjVop5IQwB6su3rg_8wJU3Y4rmEOGS37IwVbbnGAIhwBq3uYr2QX7JMtq2RJxEOA56z1WpBclV_mJrU0zfS5n2maxV5Pp6pmkNJOGQU5Sia5ZhFjVIMxgGYdlCmC4mJz1lDKgiRHdk3JFLUozpjjUbFHSvh1e_SciiXzsa01phK5wNHTcsYog3BM5f9aqvmhOIQ7n-d61YgL71SodO58sVOyEEMdYRq9aO8MCG9qiPY4M_XHwg88Bvo5Ttw3v-mzXXAruZKnkYfgksne3Qh1lue_
' URL: http://www.plantuml.com/plantuml/uml/ZLGxQyCm4DxrApIs3OREffGKiXG22KdfMbpxS4KLoKYo-wB_lNUId5YMXou9-kw-nvsKhAshZEjFajbteRhAL2TUoyhQ1-UCUEqTFDPQ7SKty5ls9XhWjJ2r1CPy5zy80xKJMja3s0w_WFympWkKTRqj-H5LL4k8qIY6o5POTtUWmpt11NwiMd17JxYwdb1MzWodSjWqQD54fjVop5IQwB6su3rg_8wJU3Y4rmEOGS37IwVbbnGAIhwBq3uYr2QX7JMtq2RJxEOA56z1WpBclV_mJrU0zfS5n2maxV5Pp6pmkNJOGQU5Sia5ZhFjVIMxgGYdlCmC4mJz1lDKgiRHdk3JFLUozpjjUbFHSvh1e_SciiXzsa01phK5wNHTcsYog3BM5f9aqvmhOIQ7n-d61YgL71SodO58sVOyEEMdYRq9aO8MCG9qiPY4M_XHwg88Bvo5Ttw3v-mzXXAruZKnkYfgksne3Qh1lue_
' Generated on: 2026-05-25T15:51:38.794276900

@startuml

class DirectionsResponse {
  -status: String
  -routes: List<Route>
  --
  +getStatus(): String
  +setStatus(status: String): void
  +getRoutes(): List<Route>
  +setRoutes(routes: List<Route>): void
}

class Route {
  -overview_polyline: OverviewPolyline
  -legs: List<Leg>
  --
  +getOverview_polyline(): OverviewPolyline
  +setOverview_polyline(overview_polyline: OverviewPolyline): void
  +getLegs(): List<Leg>
  +setLegs(legs: List<Leg>): void
}

class OverviewPolyline {
  -points: String
  --
  +getPoints(): String
  +setPoints(points: String): void
}

class Leg {
  -distance: TextValue
  -duration: TextValue
  --
  +getDistance(): TextValue
  +setDistance(distance: TextValue): void
  +getDuration(): TextValue
  +setDuration(duration: TextValue): void
}

class TextValue {
  -text: String
  -value: int
  --
  +getText(): String
  +setText(text: String): void
  +getValue(): int
  +setValue(value: int): void
}

DirectionsResponse o-- Route
Route *-- OverviewPolyline
Route o-- Leg
Leg *-- TextValue
@enduml